--- a/BuoiTH2/baitap/bai_7/noidung.css
+++ b/BuoiTH2/baitap/bai_7/noidung.css
@@ -45,21 +45,31 @@ body {
 }
 
 #left {
+    /* border: 1px solid #cdcdcd; */
     width: 150px;
     min-height: 400px;
-    float: left;
-    border: 1px solid #cdcdcd;
+    float: left;    
     background-color: transparent; 
-      box-sizing: border-box;
+      /* box-sizing: border-box; */
+    margin-bottom: 2px;
+}
+
+#right {
+    /* border: 1px solid #cdcdcd; */
+    width: 234px;
+    min-height: 400px;
+    float: right;
+    background-color: transparent; 
     margin-bottom: 2px;
 }
 
 .menu-left {
-    background-color: #ffffff;
+    background-color: #f3fce9;
     border: 1px solid #dcdcdc;
-    
-    margin: 5px;
+    border-radius: 8px;
+    margin: 1px;
     padding-bottom: 5px;
+   
 }
 
 .menu-title {
@@ -72,7 +82,7 @@ body {
 .menu-left ul {
     list-style-image: url("../images/bullet_green.png");
     padding-left: 25px;
-    margin: 5px 0;
+    margin: 5px 5px;
 }
 
 .menu-left ul li {
@@ -92,7 +102,7 @@ body {
     width: 606px; 
     min-height: 400px;
     float: left;
-    border: 1px solid #cdcdcd;
+    /* border: 1px solid #cdcdcd; */
     margin: 0 2px 2px 2px; 
     background-color: #ffffff; 
     box-sizing: border-box; /* Bao gồm luôn viền vào kích thước 606px */
@@ -127,15 +137,6 @@ body {
     padding: 8px 0;            
     background-color: #f0fff0; 
     border-top: 1px solid #99cc99; 
-}
-
-#right {
-    border: 1px solid #cdcdcd;
-    width: 234px;
-    min-height: 400px;
-    float: right;
-    background-color: transparent; 
-    margin-bottom: 2px;
 }
 
 #footer {
