--- a/BuoiTH2/baitap/bai_7/noidung.css
+++ b/BuoiTH2/baitap/bai_7/noidung.css
@@ -1,4 +1,4 @@
-/* ĐƯA MÀU NỀN #ffecce RA BODY ĐỂ BAO TRỌN CẢ TRANG */
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
@@ -11,7 +11,7 @@ body {
     width: 1000px;
     margin: 0 auto;
     background-color: transparent; 
-    overflow: hidden; /* Giữ layout không bị vỡ khi co giãn xuống */
+    overflow: hidden; /* dữ layout không bị vỡ khi co giãn xuống */
 }
 
 #head {
@@ -106,15 +106,15 @@ body {
     margin: 0 2px 2px 2px; 
     background-color: #ffffff; 
     box-sizing: border-box; /* Bao gồm luôn viền vào kích thước 606px */
-    padding: 2px; /* Dành ra 2px lề trong để viền sản phẩm không dính chặt vào viền xám ngoài */
+    padding: 2px; /* nhín ra 2px lề trong để viền sản phẩm không dính chặt vào viền xám ngoài */
 }
 
-/* Chiều rộng khả dụng bên trong = 606 - 2(viền) - 4(padding) = 600px */
+/* Chiều rộng bên trong = 606 - 2(viền) - 4(padding) = 600px */
 .san-pham {
     width: 296px; /* Chiều rộng khung */
 
     float: left;
-    margin: 2px; /* Lề cách nhau 2px. 296+2+2 = 300px/sản phẩm. 2 sản phẩm là đúng 600px */
+    margin: 2px; /* Lề cách nhau 2px. 296+2+2 = 300px/sản phẩm. 2 sản phẩm = 600px */
     text-align: center;
     border: 1px solid #99cc99; 
     background-color: #ffffff;
